# offsuitPokerLeagueLeaderboard

./: .gitignore  LICENSE  NOTICE  README.md.lean  ambiguous_names_analysis.txt  app.py  launch.json  month_doc.json  poker_analyzer.py  poker_scraper.py  poker_scraper2.py  pyproject.toml  readme.md  requirements.txt  run_app.py
.github/workflows/: emailDatabaseBackup.yml  keepAlive.yml  main_offsuitpokeranalyzer.yml  pokerEventScheduler.yml  refreshLegacyRounds.yml  refreshRoundsDB.yml  updateCloudFlareIPS.yml
june2025/: alibi.html  chatters.html  corkNBarrel.html  hosed.html  lakeside.html  laytonHeights.html  mavricks.html  southBound.html  wittsEnd.html
june2025/output/: alibi.csv  anticipationTues.csv  chatters.csv  combined_output.xlsx  cumulative_leaderboard.csv  lakeside.csv  laytonHeights.csv  tinys.csv
offsuit_analyzer/: __init__.py  api_service.py  app.py  config.py  name_tools_controller.py
offsuit_analyzer/analytics/: __init__.py  placement_analyzer.py  player_disconnectedness.py  player_weighted_spring_graph.py  poker_analyzer.py  roi_analyzer.py  skill_island_visualization.py  trueskill_analyzer.py  win_rate_analyzer.py
offsuit_analyzer/data_service/: __init__.py  add_round_manually.py  data_converter.py  external_data_client.py  legacy_data_client.py  rounds_provider.py
offsuit_analyzer/datamodel/: name_clash.py  round.py
offsuit_analyzer/email_smtp_service/: __init__.py  email_client.py
offsuit_analyzer/name_tools/: __init__.py  adaptive_name_problem_detector.py  name_clash_detector.py  (+1 more)
oldStuffRename/: lru_cache_example.txt  poker_analyzer.py  poker_scraper3.py
src/: api_service.py  chatgpt_garbage.py  cosmos_handler.py  db_handler.py  delete_all.py  determine_name_ambiguities.py  keep_the_score_api_service.py  mapping_service.py  nonsense.py  player_at_round_result.py  player_round_entry.py  poker_analyzer.py  poker_analyzer2.py  poker_data_transformer.py  round.py  round_data_object.py  script_to_migrate_legacy_csv.py  test_flattening_month.py  tester.py  timed_daily_events.py  wipe.py
tests/: run_all_tests.py  test_name_processing.py  test_poker_analytics.py  test_poker_system.py
(+89 files in other folders)
