[tool.poetry]
name = "poker-scraper"
version = "0.1.0"
description = "Poker tournament analytics and scraping system"
authors = ["John Fox <jicfox7@gmail.com>"]
readme = "readme.md"
packages = [{ include = "poker_scraper", from = "src" }]
repository = "https://github.com/jff97/pokerScraper"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
pymongo = "*"
python-dotenv = "*"
requests = "*"
pandas = "*"
rapidfuzz = "*"
trueskill = "*"
flask_cors = "*"
flask-limiter = "*"

[tool.poetry.scripts]
poker-scraper = "poker_scraper.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
